--- a/index 3.html
+++ b/index 3.html
@@ -3,7 +3,7 @@
     <head>
         <!--Título y Descripción de la Página x cada página del sitio web-->
         <meta title="Alberto Angulo - Diseño Web">
-        <title>Título de Página Web</title>
+        <title>Michelle Suarez</title>
         <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut volutpat, purus sodales condimentum vehicula, nibh orci mollis diam, a rutrum orci dolor quis est."/>
         
         <!--Codificación de Caracteres-->
